@@ -13,7 +13,7 @@ before_install:
    - sudo apt-get install devscripts rsync
 
 install:
-   - yes '' | cpanm --verbose --notest --skip-satisfied Config::File File::BaseDir File::Rsync File::Slurp File::Touch File::Which Modern::Perl Mouse Test::Differences Test::File Devel::Cover::Report::Coveralls
+   - yes '' | cpanm --verbose --notest --skip-satisfied Config::File File::BaseDir File::Rsync File::Slurp File::Touch File::Which Modern::Perl Moo Test::Differences Test::File Devel::Cover::Report::Coveralls
    - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1 PATH=${PERLBREW_PATH}:${PATH}
 
 script:
